--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Portfolio-site</title>
 </head>
 <body>
+    <nav>
+        <div class="logo">SNEHAL.DEV</div>
+        <Ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Project</a></li>
+            <li><a href="#">Contact</a></li>
+        </Ul>
+    </nav>
     
 </body>
 </html>
