--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
             <li><a href="#">Contact</a></li>
         </Ul>
     </nav>
+    <!-- Home -->
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <p>WE DESIGN & BUILD BRANDS</p>
+            <h1>Hi, I am <span>Snehal Khater</span></h1>
+            <p>I build responsive & modern websites.</p>
+            <div class="buttons">
+                <button>Hire me</button>
+                <button>Download CV</button>
+            </div>
+        </div>
+        <div class="image-wrapper">
+            <div class="hero-image">
+                <img src="./images/sk.jpg" alt="Snehal Image">
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
