--- a/index.html
+++ b/index.html
@@ -33,6 +33,30 @@
             </div>
         </div>
     </section>
+    <!-- About -->
+    <section id="about" class="about-section">
+        <div class="about-image">
+            <img src="./images/snehal.jpg" alt="Profile Image">
+        </div>
+        <div class="about-content">
+            <h2>About Me</h2>
+            <p>I'm Snehal Khater, a frontend developer passionate about creating responsive and user-friendly websites.
+                Skilled in HTML, CSS, and JavaScript with practical project experience. I focus on clean UI design and
+                mobile-first development while continuously learning and improving every day.</p>
+            <div class="about-info"><span>Name:</span> Snehal Vinod Khater</div><br>
+            <div class="about-info"><span>Date of Birth:</span> June 05, 2005</div><br>
+            <div class="about-info"><span>Address:</span> Karjat City, India</div><br>
+            <div class="about-info"><span>Zip code:</span>414402</div><br>
+            <div class="about-info"><span>Email:</span> Khatersnehal@gmail.com</div><br>
+            <div class="about-info"><span>Phone:</span> +91-8767524245</div><br>
+            <div class="tags">
+                <span>Drawing</span>
+                <span>Music</span>
+                <span>Travel</span>
+                <span>Movie</span>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
