--- a/index.html
+++ b/index.html
@@ -58,5 +58,28 @@
         </div>
     </section>
     
+<!-- Skills -->
+    <section id="skills" class="skills-section">
+        <h2>My Skills</h2>
+        <div class="skills-grid">
+            <div class="skill-item">
+                <img src="./images/html.png" alt="HTML">
+                <span>HTML</span>
+            </div>
+            <div class="skill-item">
+                <img src="./images/css.png" alt="CSS">
+                <span>CSS</span>
+            </div>
+            <div class="skill-item">
+                <img src="./images/js.png" alt="JavaScript">
+                <span>JavaScript</span>
+            </div>
+            <div class="skill-item">
+                <img src="./images/java.png" alt="Java">
+                <span>Java</span>
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
