--- a/index.html
+++ b/index.html
@@ -80,6 +80,30 @@
             </div>
         </div>
     </section>
+    <!-- pojects -->
+    <section id="projects" class="projects-section">
+        <h2>My Projects</h2>
+        <div class="projects-grid">
+            <div class="project-item">
+                <img src="./images/project1.jpg" alt="Project 1">
+                <h3>E-Commerce Website</h3>
+                <p>HTML, CSS, JavaScript</p>
+                <a href="#">View Project</a>
+            </div>
+            <div class="project-item">
+                <img src="./images/project2.jpg" alt="Project 2">
+                <h3> Fitness Trainer Website</h3>
+                <p>HTML, CSS, JS</p>
+                <a href="#">View Project</a>
+            </div>
+            <div class="project-item">
+                <img src="./images/project3.jpg" alt="Project 3">
+                <h3>Portfolio Website</h3>
+                <p>HTML, CSS</p>
+                <a href="#">View Project</a>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
