--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
             </div>
         </div>
     </section>
+       <!-- contact -->
+    <section id="contact" class="contact-section">
+        <h2 class="section-title">Contact</h2>
+        <form class="contact-form">
+            <input type="text" placeholder="Your Name">
+            <input type="email" placeholder="Your Email">
+            <textarea rows="5" placeholder="Your Message"></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
     
 </body>
 </html>
