--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@
             <button type="submit">Send Message</button>
         </form>
     </section>
+    <!-- Footer Section -->
+    <footer>
+        <h3>SNEHAL.DEV</h3>
+        <p>Crafting frontend experiences with code & creativity ✨</p>
+        <div class="social-icons">
+            <a href="#"><img src="./images/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="./images/github.png" alt="GitHub"></a>
+            <a href="#"><img src="./images/linkedin.png" alt="LinkedIn"></a>
+        </div>
+        <small>&copy; 2025 Snehal Khater. All rights reserved.</small>
+    </footer>
+
     
 </body>
 </html>
