--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-site</title>
 </head>
+<link rel="stylesheet" href="./css/home.css">
 <body>
     <nav>
         <div class="logo">SNEHAL.DEV</div>
@@ -57,8 +59,8 @@
             </div>
         </div>
     </section>
-    
-<!-- Skills -->
+
+    <!-- Skills -->
     <section id="skills" class="skills-section">
         <h2>My Skills</h2>
         <div class="skills-grid">
@@ -104,7 +106,7 @@
             </div>
         </div>
     </section>
-       <!-- contact -->
+    <!-- contact -->
     <section id="contact" class="contact-section">
         <h2 class="section-title">Contact</h2>
         <form class="contact-form">
@@ -114,6 +116,7 @@
             <button type="submit">Send Message</button>
         </form>
     </section>
+    <hr>
     <!-- Footer Section -->
     <footer>
         <h3>SNEHAL.DEV</h3>
@@ -126,6 +129,7 @@
         <small>&copy; 2025 Snehal Khater. All rights reserved.</small>
     </footer>
 
-    
+
 </body>
+
 </html>
