--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         </div>
         <div class="image-wrapper">
             <div class="hero-image">
-                <img src="./images/sk.jpg" alt="Snehal Image">
+                <img src="./image/sk.jpg" alt="Snehal Image">
             </div>
         </div>
     </section>
     <!-- About -->
     <section id="about" class="about-section">
         <div class="about-image">
-            <img src="./images/snehal.jpg" alt="Profile Image">
+            <img src="./image/snehal.jpg" alt="Profile Image">
         </div>
         <div class="about-content">
             <h2>About Me</h2>
@@ -65,19 +65,19 @@
         <h2>My Skills</h2>
         <div class="skills-grid">
             <div class="skill-item">
-                <img src="./images/html.png" alt="HTML">
+                <img src="./image/html.png" alt="HTML">
                 <span>HTML</span>
             </div>
             <div class="skill-item">
-                <img src="./images/css.png" alt="CSS">
+                <img src="./image/css.png" alt="CSS">
                 <span>CSS</span>
             </div>
             <div class="skill-item">
-                <img src="./images/js.png" alt="JavaScript">
+                <img src="./image/js.png" alt="JavaScript">
                 <span>JavaScript</span>
             </div>
             <div class="skill-item">
-                <img src="./images/java.png" alt="Java">
+                <img src="./image/java.png" alt="Java">
                 <span>Java</span>
             </div>
         </div>
