--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <h1>Hi, I am <span>Snehal Khater</span></h1>
             <p>I build responsive & modern websites.</p>
             <div class="buttons">
-                <button><a href="#">Hire me</a></button>
-                <button><a href="#">Download CV</a></button>
+                <button><a href="#contact">Hire me</a></button>
+                <button><a href="./snehal resume .pdf"  target="_blank" rel="noopener noreferrer">Download CV</a></button>
             </div>
         </div>
         <div class="image-wrapper">
@@ -130,7 +130,7 @@
             <input type="text" placeholder="Your Name">
             <input type="email" placeholder="Your Email">
             <textarea rows="5" placeholder="Your Message"></textarea>
-            <button type="submit">Send Message</button>
+            <button type="submit"><a href="#home"> Message</a></button>
         </form>
     </section>
     <hr>
